# simple-transactions

./: .example.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: docker-compose.dev.yml
migration/: env.py
migration/versions/: 0b67dfae96bf_user_model.py  1fd2f490395b_transaction_model_another_update.py  2bdc23bb3e26_transaction_model_update_relationships.py  57fbc6b329c8_user_user_relations.py  6645cf2b3251_balance_transaction_model.py  daa6b993d89d_transaction_model_update.py  fb326116eb06_another_relations.py
simple_transactions/auth/: __main__.py  log.py  settings.py
simple_transactions/auth/container/: container.py
simple_transactions/auth/db/dao/: crud.py  database.py  extended.py  interface.py
simple_transactions/auth/migration/: env.py
simple_transactions/auth/services/: auth.py  security.py  utils.py
simple_transactions/auth/web/: application.py  lifespan.py
simple_transactions/migration/: env.py
simple_transactions/migration/versions/: 0b67dfae96bf_user_model.py  2bdc23bb3e26_transaction_model_update_relationships.py  6645cf2b3251_balance_transaction_model.py  daa6b993d89d_transaction_model_update.py
simple_transactions/operation/: __main__.py  alembic.ini  log.py  settings.py
simple_transactions/operation/container/: container.py
simple_transactions/operation/db/: base.py
simple_transactions/operation/migration/: env.py
simple_transactions/operation/services/: auth_client.py  transactions.py  utils.py
simple_transactions/operation/web/: application.py  lifespan.py
(+21 files in other folders)
